--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,10 +59,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/logo.png
-      - assets/icons/google.png
-      - assets/icons/facebook.png
-      - assets/icons/vk.png
+      - assets/icons/
+      - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
