--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/Users/iskursakov/Library/Android/sdk
-flutter.sdk=/Users/iskursakov/Documents/development/flutter
+sdk.dir=C:\\Users\\mariurmm\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\mariurmm\\develop\\flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
